Nickname for user (#166)
* nickname for user

https://app.clickup.com/t/86c5d8qrv

* update tests
