# src/entities/mod.rs
@@ -1,6 +1,7 @@
 pub mod access_user;
 pub mod community;
 pub mod discussion_user;
+pub mod nickname;
 pub mod reply;
 pub mod tag;
 pub mod task;
